# agent_ia_target_v061

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml
data/mappings/: alias.yaml
src/: chatbot_agents.py  comparative_calculator.py  text_normalizer.py
src/config/: agent_config.py  model_config.py
src/filters/: __init__.py
src/filters/core/: __init__.py  extractor.py  manager.py  replacer.py
src/filters/processors/: __init__.py  filter_removal_detector.py  intelligent_query_preprocessor.py
src/filters/ui/: __init__.py  sidebar.py
src/insights/: __init__.py  numeric_analyzer.py  numeric_core.py  numeric_formatter.py
src/parsers/legacy/: sql_context_parser.py
src/prompts/: chatbot_prompt.py  prompt_examples.py  prompt_rules.py
src/tools/: debug_duckdb_tools.py  optimized_python_tools.py  visualization_tools.py
src/utils/: data_loaders.py  dataframe_optimizer.py  formatters.py  lazy_imports.py  performance_cache.py  query_intent_analyzer.py  sql_cache.py  sql_column_mapper.py
src/visualization/: plotly_charts.py
tests/: test_dimension_assignment.py  test_numeric_analyzer.py  test_unified_filter_system.py
